--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <link rel="stylesheet" href="styles.css"
     </head>
     <body>
-
+        <p>
+            Misalkan kita punya hal seperti ini
+        </p>
     </body>
