Tampilan fix + Responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
            <!-- Buttons for calculating and reset input -->
         <div>
-            <button>Calculate</button>
+            <button id="calculate-button">Calculate</button>
         </div>
 
         </form>
@@ -83,12 +83,8 @@
         <section class="right-section">
             <header>
                 <h2>BMI Result</h2>
-            </header>
-        
-            <section>
+            </header>        
                 <span id="bmi-result">0</span>
-            </section>
-
             <article>
                 <p class="right-article">
                     In this ten-day short course, you'll learn all about becoming a software engineer, including the career path possibilities. We'll also give you the opportunity to practice the main responsibilities of a software engineer as well!
