--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
 
     <main>
-        <!-- Left Content -->
-        <section class="left-section">
+        <!-- Top Content -->
+        <section class="top-section">
         <!-- Introduction to the website -->
          
         <article>
@@ -63,7 +63,7 @@
             </div>
            <!-- Buttons for calculating and reset input -->
         <div>
-            <button type="button" id="calculate-button">Calculate</button>
+            <button type="button" id="calculate-button" onclick="checkBMI()">Calculate</button>
         </div>
 
         </form>
@@ -85,7 +85,7 @@
         </section>
 
         <!-- Right Content -->
-        <section class="right-section">
+        <section class="bottom-section">
             <h2>BMI Result</h2>
 
             <!-- For the JS result -->
@@ -113,7 +113,7 @@
             Made by Ren.
         </span>
     </footer>
-    <script src="js\script.js" defer></script>
+    <script src="js\script.js"></script>
 </body>
 
 </html>
